--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,12 +7,20 @@ ul {
     padding: 0;
     margin: 0;
 }
+ul > div {
+    position:relative;
+    width: 90%;
+    margin: 10px auto;
+}
+.edit {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
 li {
     display: block;
-    width: 90%;
     border: 1px solid #cdcdcd;
     box-shadow: 1px 1px 3px #cdcdcd;
-    margin: 10px auto;
     padding: 10px;
 }
 li.current {
@@ -27,4 +35,30 @@ li.complete {
 p {
     padding: 2px 0;
     margin: 0;
+}
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #000;
+    opacity: .8;
+    z-index: 100;
+}
+.modal {
+    position: fixed;
+    top: 10%;
+    left: 5%;
+    width: 90%;
+    background: #fff;
+    padding: 10px;
+    box-sizing: border-box;
+    z-index: 100;
+}
+input {
+    display: block;
+    padding: 5px;
+    font-size: 16px;
+    border: 1px solid #cdcdcd;
 }
