--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,6 +2,9 @@ body {
     font-family: sans-serif;
     font-size: 16px;
 }
+body.modal-open {
+    overflow: hidden;
+}
 ul {
     list-style: none;
     padding: 0;
